--- a/preprojet/CV/Gauffre/ConfigGameWindow.ui
+++ b/preprojet/CV/Gauffre/ConfigGameWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ConfigGameWindow</class>
- <widget class="QWidget" name="ConfigGameWindow">
+ <widget class="QDialog" name="ConfigGameWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,6 +12,9 @@
   </property>
   <property name="windowTitle">
    <string>Configuration</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -152,6 +155,9 @@
         </item>
         <item>
          <widget class="QComboBox" name="comboBox_3">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <item>
            <property name="text">
             <string>Jeu aléatoire</string>
@@ -195,6 +201,9 @@
         </item>
         <item>
          <widget class="QComboBox" name="comboBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <item>
            <property name="text">
             <string>Jeu aléatoire</string>
@@ -214,6 +223,9 @@
         </item>
         <item>
          <widget class="QComboBox" name="comboBox_2">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <item>
            <property name="text">
             <string>Jeu aléatoire</string>
@@ -302,7 +314,7 @@
  <connections>
   <connection>
    <sender>cvcRadioButton</sender>
-   <signal>clicked(bool)</signal>
+   <signal>toggled(bool)</signal>
    <receiver>comboBox</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
@@ -318,7 +330,7 @@
   </connection>
   <connection>
    <sender>pvcRadioButton</sender>
-   <signal>clicked(bool)</signal>
+   <signal>toggled(bool)</signal>
    <receiver>comboBox_3</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
@@ -334,7 +346,7 @@
   </connection>
   <connection>
    <sender>cvcRadioButton</sender>
-   <signal>clicked(bool)</signal>
+   <signal>toggled(bool)</signal>
    <receiver>comboBox_2</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
@@ -343,8 +355,8 @@
      <y>271</y>
     </hint>
     <hint type="destinationlabel">
-     <x>325</x>
-     <y>286</y>
+     <x>530</x>
+     <y>288</y>
     </hint>
    </hints>
   </connection>
