Ajout de la graphicsView

--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -49,6 +49,16 @@
      <string>Quitter</string>
     </property>
    </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>120</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
