--- a/preprojet/CV/Gauffre/ConfigGameWindow.ui
+++ b/preprojet/CV/Gauffre/ConfigGameWindow.ui
@@ -224,7 +224,7 @@
         <item>
          <widget class="QComboBox" name="comboBox_2">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <item>
            <property name="text">
@@ -367,8 +367,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>491</x>
-     <y>358</y>
+     <x>647</x>
+     <y>368</y>
     </hint>
     <hint type="destinationlabel">
      <x>486</x>
