--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -69,6 +69,22 @@
      <height>20</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFichier">
+    <property name="title">
+     <string>Fichier</string>
+    </property>
+    <addaction name="actionConfigurer_une_partie"/>
+    <addaction name="actionSauver"/>
+    <addaction name="actionCharger"/>
+    <addaction name="actionQuitter"/>
+   </widget>
+   <widget class="QMenu" name="menuEdition">
+    <property name="title">
+     <string>Edition</string>
+    </property>
+   </widget>
+   <addaction name="menuFichier"/>
+   <addaction name="menuEdition"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -79,6 +95,31 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionConfigurer_une_partie">
+   <property name="text">
+    <string>Configurer une partie</string>
+   </property>
+  </action>
+  <action name="actionSauver">
+   <property name="text">
+    <string>Sauver</string>
+   </property>
+  </action>
+  <action name="actionCharger">
+   <property name="text">
+    <string>Charger</string>
+   </property>
+  </action>
+  <action name="actionQuitter">
+   <property name="text">
+    <string>Quitter</string>
+   </property>
+  </action>
+  <action name="actionNouvelle_partie">
+   <property name="text">
+    <string>Nouvelle partie</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
@@ -90,8 +131,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>486</x>
-     <y>451</y>
+     <x>537</x>
+     <y>493</y>
     </hint>
     <hint type="destinationlabel">
      <x>422</x>
