--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -45,7 +45,7 @@
          <string/>
         </property>
         <property name="text">
-         <string>Nouveau Jeu</string>
+         <string>Nouveaué Jeu</string>
         </property>
        </widget>
       </item>
