--- a/preprojet/CV/Gauffre/ConfigGameWindow.ui
+++ b/preprojet/CV/Gauffre/ConfigGameWindow.ui
@@ -71,6 +71,9 @@
           <property name="maximum">
            <number>50</number>
           </property>
+          <property name="value">
+           <number>5</number>
+          </property>
          </widget>
         </item>
         <item>
@@ -107,6 +110,9 @@
           </property>
           <property name="maximum">
            <number>50</number>
+          </property>
+          <property name="value">
+           <number>4</number>
           </property>
          </widget>
         </item>
@@ -383,11 +389,11 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>515</x>
-     <y>358</y>
+     <x>530</x>
+     <y>360</y>
     </hint>
     <hint type="destinationlabel">
-     <x>372</x>
+     <x>360</x>
      <y>345</y>
     </hint>
    </hints>
