--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -102,7 +102,15 @@
     <addaction name="actionCharger"/>
     <addaction name="actionQuitter"/>
    </widget>
+   <widget class="QMenu" name="menuEdition">
+    <property name="title">
+     <string>Edition</string>
+    </property>
+    <addaction name="actionAnnuler"/>
+    <addaction name="actionRefaire"/>
+   </widget>
    <addaction name="menuFichier"/>
+   <addaction name="menuEdition"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionConfigurer_une_partie">
@@ -133,6 +141,16 @@
   <action name="actionSauver_2">
    <property name="text">
     <string>sauver</string>
+   </property>
+  </action>
+  <action name="actionAnnuler">
+   <property name="text">
+    <string>Annuler</string>
+   </property>
+  </action>
+  <action name="actionRefaire">
+   <property name="text">
+    <string>Refaire</string>
    </property>
   </action>
  </widget>
