--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -97,38 +97,37 @@
     <property name="title">
      <string>Fichier</string>
     </property>
-    <addaction name="actionConfigurer_une_partie"/>
-    <addaction name="actionSauver"/>
-    <addaction name="actionCharger"/>
-    <addaction name="actionQuitter"/>
+    <addaction name="configureAction"/>
+    <addaction name="saveAction"/>
+    <addaction name="loadAction"/>
+    <addaction name="exitAction"/>
    </widget>
    <widget class="QMenu" name="menuEdition">
     <property name="title">
      <string>Edition</string>
     </property>
-    <addaction name="actionAnnuler"/>
-    <addaction name="actionRefaire"/>
+    <addaction name="undoAction"/>
+    <addaction name="redoAction"/>
    </widget>
    <addaction name="menuFichier"/>
    <addaction name="menuEdition"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionConfigurer_une_partie">
+  <action name="configureAction">
    <property name="text">
     <string>Configurer une partie</string>
    </property>
   </action>
-  <action name="actionSauver">
+  <action name="saveAction">
    <property name="text">
     <string>Sauver</string>
    </property>
   </action>
-  <action name="actionCharger">
+  <action name="loadAction">
    <property name="text">
     <string>Charger</string>
    </property>
   </action>
-  <action name="actionQuitter">
+  <action name="exitAction">
    <property name="text">
     <string>Quitter</string>
    </property>
@@ -143,12 +142,12 @@
     <string>sauver</string>
    </property>
   </action>
-  <action name="actionAnnuler">
+  <action name="undoAction">
    <property name="text">
     <string>Annuler</string>
    </property>
   </action>
-  <action name="actionRefaire">
+  <action name="redoAction">
    <property name="text">
     <string>Refaire</string>
    </property>
