ajout de shortcut

--- a/preprojet/CV/Gauffre/GameWindow.ui
+++ b/preprojet/CV/Gauffre/GameWindow.ui
@@ -248,6 +248,9 @@
    <property name="text">
     <string>Charger</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="exitAction">
    <property name="text">
