--- a/preprojet/CV/Gauffre/LoadWindow.ui
+++ b/preprojet/CV/Gauffre/LoadWindow.ui
@@ -26,7 +26,7 @@
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QListView" name="listView"/>
+         <widget class="QListView" name="listViews"/>
         </item>
        </layout>
       </widget>
