--- a/preprojet/CV/Gauffre/LoadWindow.ui
+++ b/preprojet/CV/Gauffre/LoadWindow.ui
@@ -104,9 +104,7 @@
          </spacer>
         </item>
        </layout>
-       <zorder>groupBox</zorder>
        <zorder>verticalSpacer</zorder>
-       <zorder>formLayoutWidget</zorder>
       </widget>
      </item>
      <item>
@@ -140,7 +138,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="loadButton">
        <property name="text">
         <string>Charger</string>
        </property>
