--- a/StreetCar/StreetCar/MainWindow.ui
+++ b/StreetCar/StreetCar/MainWindow.ui
@@ -22,7 +22,11 @@ border-image: url(/home/jeremie/Projet_Prog_Jeu/StreetCar/StreetCar/images/Panam
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QHBoxLayout" name="layoutMenu"/>
+     <layout class="QHBoxLayout" name="layoutMenu">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
+     </layout>
     </item>
     <item>
      <spacer name="horizontalSpacer">
