--- a/StreetCar/StreetCar/MainMenu.ui
+++ b/StreetCar/StreetCar/MainMenu.ui
@@ -34,6 +34,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="buttonOptions">
+        <property name="text">
+         <string>Options</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
