--- a/StreetCar/StreetCar/MainMenu.ui
+++ b/StreetCar/StreetCar/MainMenu.ui
@@ -44,6 +44,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="buttonExit">
+        <property name="text">
+         <string>Quitter</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
