--- a/StreetCar/StreetCar/OptionsMenu.ui
+++ b/StreetCar/StreetCar/OptionsMenu.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OptionsWindow</class>
- <widget class="QWidget" name="OptionsWindow">
+ <class>OptionsMenu</class>
+ <widget class="QWidget" name="OptionsMenu">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -21,16 +21,16 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <widget class="QPushButton" name="buttonGraphics">
+       <widget class="QPushButton" name="buttonSound">
         <property name="text">
-         <string>Grraphique</string>
+         <string>Son</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="buttonCredits">
+       <widget class="QPushButton" name="buttonGraphics">
         <property name="text">
-         <string>Crédits</string>
+         <string>Graphique</string>
         </property>
        </widget>
       </item>
@@ -42,23 +42,23 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="buttonRules">
+        <property name="text">
+         <string>Règles</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonCredits">
+        <property name="text">
+         <string>A propos</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="buttonBack">
         <property name="text">
          <string>Retour Menu</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="buttonInstructions">
-        <property name="text">
-         <string>Instructions</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="buttonSound">
-        <property name="text">
-         <string>Son</string>
         </property>
        </widget>
       </item>
