--- a/StreetCar/StreetCar/NewLocalGame.ui
+++ b/StreetCar/StreetCar/NewLocalGame.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Nouvelle partie (local)</string>
+      <string>Nouveau jeu (local)</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
@@ -25,7 +25,7 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Nomrbre de joueurs :</string>
+           <string>Nombre de joueurs :</string>
           </property>
          </widget>
         </item>
@@ -129,16 +129,16 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="buttonCancel">
+         <widget class="QPushButton" name="buttonPlay">
           <property name="text">
-           <string>Annuler</string>
+           <string>Jouer</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="buttonPlay">
+         <widget class="QPushButton" name="buttonCancel">
           <property name="text">
-           <string>Jouer</string>
+           <string>Annuler</string>
           </property>
          </widget>
         </item>
