--- a/StreetCar/StreetCar/MainWindow.ui
+++ b/StreetCar/StreetCar/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1032</width>
-    <height>629</height>
+    <width>1036</width>
+    <height>549</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="spacing">
+       <number>6</number>
+      </property>
       <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
@@ -43,7 +46,7 @@
         <property name="minimumSize">
          <size>
           <width>1000</width>
-          <height>200</height>
+          <height>130</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -57,7 +60,7 @@
         </property>
         <property name="styleSheet">
          <string notr="true">#label {
-	image: url(:/images/streetcar2);
+	image: url(:/images/streetcar);
 }</string>
         </property>
         <property name="text">
@@ -102,22 +105,76 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>50</height>
-         </size>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="styleSheet">
+         <string notr="true">QGroupBox {
+	border-image: url(:/images/menu_fond) 10 0 0 0;
+}</string>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>100</width>
-          <height>50</height>
-         </size>
+        <property name="title">
+         <string/>
         </property>
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <property name="leftMargin">
+          <number>20</number>
+         </property>
+         <property name="topMargin">
+          <number>10</number>
+         </property>
+         <property name="rightMargin">
+          <number>20</number>
+         </property>
+         <property name="bottomMargin">
+          <number>10</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="labelName">
+           <property name="minimumSize">
+            <size>
+             <width>50</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <family>Serif</family>
+             <pointsize>14</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">#labelName {
+	color: orange;
+}</string>
+           </property>
+           <property name="text">
+            <string>Nom de profil : </string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="labelUser">
+           <property name="minimumSize">
+            <size>
+             <width>50</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <family>Serif</family>
+             <pointsize>14</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
       <item>
@@ -197,8 +254,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1032</width>
-     <height>20</height>
+     <width>1036</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
