--- a/StreetCar/StreetCar/RulesOption.ui
+++ b/StreetCar/StreetCar/RulesOption.ui
@@ -13,13 +13,84 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#groupBox {
+	border-image: url(:/images/menu_fond);
+}
+
+#label {
+	color: orange;
+}
+
+QPushButton {
+	background-color: rgba(255, 255, 255, 0);
+}</string>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Règles du jeu</string>
+      <string/>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="leftMargin">
+       <number>40</number>
+      </property>
+      <property name="topMargin">
+       <number>30</number>
+      </property>
+      <property name="rightMargin">
+       <number>40</number>
+      </property>
+      <property name="bottomMargin">
+       <number>30</number>
+      </property>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <family>Serif</family>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Règles du jeu</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
       <item>
        <widget class="QListView" name="listView"/>
       </item>
@@ -40,8 +111,14 @@
         </item>
         <item>
          <widget class="QPushButton" name="buttonBack">
+          <property name="font">
+           <font>
+            <family>Serif</family>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
           <property name="text">
-           <string>Retour Options</string>
+           <string>Retour</string>
           </property>
          </widget>
         </item>
